Fixed Review prompt for IE + Fixed Modal form on IE
^

--- a/public/app/drugs/drug-review.scss
+++ b/public/app/drugs/drug-review.scss
@@ -45,3 +45,8 @@
 		}
 	}	
 }
+
+.ie-dialog {
+	display:block; 
+	overflow: auto;
+}
